:bug: Fix unreadable preformatted text in dark mode

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -106,7 +106,7 @@ article {
 	  white-space: unset;
 	  padding: 1rem;
 	  background-color: var(--black-500);
-	  color: var(--bg-color);
+	  color: #eee;
 	  border-radius: 0.25rem;
   }
 
